# mancala

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
mancala-bin/: Cargo.toml
mancala-lib/: Cargo.toml
mancala-lib/src/: error.rs  gamestate.rs  lib.rs  mancala.rs
mancala-lib/src/precomputed/: mod.rs  precomputed_walk.rs
mancala-player/: Cargo.toml
perft/: Cargo.toml
perft-cli/: Cargo.toml
perft-cli/src/: dispatch.rs  main.rs
perft-cli/tests/: test_cli.rs
perft/benches/: instructions.rs  walltime.rs
perft/src/: algorithms.rs  cli.rs  dispatch.rs  error.rs  lib.rs  main.rs  perft.rs  types.rs
perft/tests/: test_cli.rs
search/: Cargo.toml  README.md
src/: main.rs  mancala.rs
