[package]
name = "perft-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
mancala-lib = { version = "^0.1.0", path = "../mancala-lib" }
perft = { version = "0.1.0", path = "../perft", features = ["parallel"] }
rayon = { version = "1.11.0", optional = true }
thiserror = "2.0.16"

[features]
parallel = ["rayon"]

[dev-dependencies]
rstest = "0.26.1"

[[bin]]
name = "perft"
path = "src/main.rs"
