[package]
name = "perft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
mancala-lib = { version = "0.0.0", path = "../mancala-lib" }
thiserror = "2.0.16"

[registries]
kellnr = { index = "http://192.168.1.15:8000/api/v1/crates" }
