[package]
name = "perft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
mancala-lib = { version = "0.1.0", path = "../mancala-lib" }
rayon = { version = "1.11.0", optional = true }
thiserror = "2.0.16"

[features]
parallel = ["rayon"]

[dev-dependencies]
criterion = "0.7.0"
divan = "0.1.21"
iai-callgrind = "0.16.1"
rstest = "0.26.1"

[[bench]]
name = "instructions"
harness = false

[[bench]]
name = "walltime"
harness = false
